# trellozilla

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  AUTHORS.rst  CONTRIBUTING.rst  ChangeLog  HISTORY.rst  LICENSE  Makefile  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
tests/: __init__.py  test_trellozilla.py
tests/core/: test_bugzilla.py  test_config.py  test_trello.py
tests/jobs/: test_generate_trello_oauth_token.py
trellozilla/: __init__.py  __main__.py  cli.py  options.py
trellozilla/core/: bugzilla.py  config.py  trello.py
trellozilla/jobs/: generate_trello_oauth_token.py
