[metadata]
name = trellozilla
summary = TrelloZilla contains a set of automated tasks for when you need to track you work in both Bugzilla and Trello.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
author = Moisés Guimarães de Medeiros
author-email = moguimar@redhat.com
home-page = https://github.com/moisesguimaraes/trellozilla/
license = Apache-2.0
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: OpenStack

[entry_points]
console_scripts =
    trellozilla-generate-trello-oauth-token = trellozilla.cli:generate_trello_oauth_token

oslo.config.opts =
    trellozilla = trellozilla.options:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = trellozilla/locale
domain = trellozilla

[update_catalog]
domain = trellozilla
output_dir = trellozilla/locale
input_file = trellozilla/locale/trellozilla.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = trellozilla/locale/trellozilla.pot

[wheel]
universal = 1

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:trellozilla/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
