[metadata]
name = trellozilla
summary = TrelloZilla is a small set of boilerplate code to speed up automations in/between both Bugzilla and Trello.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
author = Moisés Guimarães de Medeiros
author-email = moguimar@redhat.com
home-page = https://github.com/moisesguimaraes/trellozilla/
license = Apache-2.0
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: OpenStack

[entry_points]
console_scripts =
    trellozilla = trellozilla:main
    generate_trello_oauth_token = trellozilla.generate_trello_oauth_token:main

oslo.config.opts =
    trellozilla = trellozilla.options:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest
